# char

./: .gitignore  .oxlintrc.json  LICENSE  README.md  azure-openai-fix.patch  doxxer.desktop.toml  eslint-plugin-hypr.mjs  package.json
.cursor/: cli.json
.cursor/commands/: add-analytics.md  add-plugin.md  diff-branch.md  manage-cli.md  update-seed.md  web-designer.md
.drizzle/: store.json
.github/workflows/: api_cd.yaml  blog-check.yml  cli_desktop_ci.yml  cli_standalone_cd.yaml  cli_standalone_ci.yml  command_dispatcher.yaml  devin_cargo_clippy.yaml  devin_explore_issues.yaml  devin_humanizer_check.yaml  devin_review_legal.yaml  devin_triage_issues.yaml  devin_update_docs.yaml  handle_release.yaml  web_cd.yaml
apps/api/: AGENTS.md
apps/bot/: .dockerignore  Dockerfile  fly.toml  package.json  tsconfig.json  vitest.config.ts
apps/chrome/: README.md  package.json  playwright.config.ts  vitest.config.ts  wxt.config.ts
apps/cli/: Cargo.toml
apps/cli-web/: astro.config.mjs  netlify.toml  package.json
apps/desktop/: index.html
apps/k6/: package.json
apps/meetingsucks/: README.md  netlify.toml  package.json
apps/mobile/: .gitignore  README.md
apps/slack-internal/: Dockerfile  fly.toml  manifest.json  package.json  tsconfig.json
apps/storybook/: netlify.toml  package.json  tsconfig.json  vite.config.ts
apps/stripe/: package.json
apps/web/: AGENTS.md  content-collections.ts  netlify.toml  playwright.config.ts  tsconfig.json
crates/analytics/: Cargo.toml
crates/api-client/: Cargo.toml  build.rs
crates/api-nango/: Cargo.toml
crates/api-support/: Cargo.toml
crates/calendar/: Cargo.toml
crates/chatwoot/: Cargo.toml  build.rs
crates/db-app/: Cargo.toml
crates/db-app/src/: calendars_ops.rs  calendars_types.rs  events_ops.rs  events_types.rs  folders_ops.rs  folders_types.rs  human_cli.rs  humans_ops.rs  humans_types.rs  lib.rs  meetings_ops.rs  meetings_types.rs  organization_cli.rs  organizations_ops.rs  organizations_types.rs  users_ops.rs  users_types.rs
crates/db-app/tests/: crud_cli.rs
crates/db-core2/: Cargo.toml
crates/db-core2/src/: lib.rs
crates/db-core2/tests/: e2e.rs
crates/db-parser/: Cargo.toml
crates/db-parser/src/: error.rs
crates/db-parser/src/v0/: convert.rs
crates/db-parser/src/v1/: mod.rs
crates/db-user/: Cargo.toml
crates/db-watch/: Cargo.toml
crates/db-watch/src/: explain.rs  lib.rs
crates/db-watch/tests/: e2e.rs
crates/detect/: Cargo.toml
crates/fs-sync-core/: Cargo.toml
crates/listener-core/: Cargo.toml
crates/local-llm-core/: Cargo.toml
crates/local-llm-core/src/: error.rs  lib.rs  model.rs  server.rs
crates/local-model/: Cargo.toml
crates/mobile-bridge/: Cargo.toml
crates/model-downloader/: Cargo.toml
crates/owhisper-client/: Cargo.toml
crates/pyannote-cloud/: Cargo.toml  build.rs  openapi-filtered.gen.json
crates/supabase-auth/: Cargo.toml
crates/supabase-auth/src/: claims.rs  error.rs  jwks.rs  lib.rs
crates/supabase-auth/src/client/: mod.rs  session.rs  store.rs
crates/supabase-auth/src/server/: jwks.rs  mod.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/vad/: Cargo.toml
crates/vad-chunking/: Cargo.toml
crates/vad/benches/: vad.rs
crates/vad/src/: silero_cactus.rs
crates/vad/src/silero_onnx/: v6.rs
crates/vad/tests/: compare.rs
crates/whisper-local/: Cargo.toml
crates/ws-client/: Cargo.toml
e2e/blackbox/: package.json
plugins/analytics/: build.rs  package.json
plugins/audio-priority/: package.json
plugins/auth/: Cargo.toml  package.json
plugins/bedrock/: package.json
plugins/calendar/: package.json
plugins/db2/: Cargo.toml  package.json
plugins/deeplink2/: package.json
plugins/detect/: package.json
plugins/flag/: package.json
plugins/fs-db/: package.json
plugins/fs-sync/: package.json
plugins/fs2/: package.json
plugins/git/: package.json
plugins/hooks/: package.json
plugins/icon/: package.json
plugins/importer/: Cargo.toml  package.json
plugins/js/: package.json
plugins/listener/: Cargo.toml  package.json
plugins/listener2/: Cargo.toml  build.rs  package.json
plugins/local-llm/: Cargo.toml  package.json
plugins/local-stt/: Cargo.toml  package.json
plugins/mcp/: package.json
plugins/misc/: package.json
plugins/network/: package.json
plugins/notification/: Cargo.toml  package.json
plugins/notify/: package.json
plugins/opener2/: package.json
plugins/overlay/: package.json
plugins/path2/: package.json
plugins/permissions/: package.json
plugins/screen/: package.json
plugins/settings/: package.json
plugins/sfx/: package.json
plugins/sidecar2/: package.json
plugins/store2/: package.json
plugins/tantivy/: package.json
plugins/template/: package.json
plugins/tracing/: package.json
scripts/: swap.sh
(+1110 files in other folders)
