[package]
name = "db-watch"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }

[dev-dependencies]
hypr-db-app = { workspace = true }
hypr-db-core2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
